--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   provider: ^4.3.2+3
   intl: ^0.16.1
+  validators: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,8 +63,8 @@ flutter:
         - asset: assets/fonts/Anton-Regular.ttf
     - family: Lato
       fonts:
-        - asset: assets/fonts/Lato_Regular.ttf
-        - asset: assets/fonts/Lato_Bold.ttf
+        - asset: assets/fonts/Lato-Regular.ttf
+        - asset: assets/fonts/Lato-Bold.ttf
           weight: 700
   #
   # For details regarding fonts from package dependencies,
